# CString

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: String.h
include/CString/: String.h
src/: String.c
tests/: CMakeLists.txt  colors.h  format_tests.c  inserts.c  memsan_tests.c  miscellaneous_tests.c  normal_tests.c  starts_ends_test.c  utest.c  utest.h
